<resources>
    <string name="app_name">Leaf Logic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Leaf Logic</string>
    <string name="nav_header_subtitle">user.name@leaflogic.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_novaPlanta">Nova Planta</string>
    <string name="menu_charts">Gráficos</string>

    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="possui_cadastro">Não possui cadastro?</string>
    <string name="tem_conta">Tem uma conta?</string>
    <string name="Ola">Olá! Que bom ver você de novo.</string>
    <string name="BemVindo">Olá! Seja muito bem-vindo!</string>
    <string name="bem_vinda_nova_planta">Uma nova planta é sempre bom!</string>
    <string name="lb_listaFilmes">Lista de Filmes Séries</string>
    <string name="Pesquisar">Pesquisar</string>
    <string name="nome_da_planta">Nome da Planta</string>
    <string name="especie">Espécie</string>
    <string name="nova_planta">Nova PLanta</string>
    <string name="nova_planta_placeholder">Nova Planta</string>
    <string name="nome_do_vaso">Nome do Vaso</string>
    <string name="nome_encontrar_vaso">*Nome do encontrado na base do Vaso</string>
    <string name="carregando_plantas">Carregando Plantas...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atualizar">Atualizar</string>
    <string name="atualizar_cadastro">Atualizar Cadastro</string>
    <string name="notification">Notificação</string>
    <string name="dicas_esp_cies">Dicas Espécies</string>
    <string name="buscar">Buscar</string>
</resources>