<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:context=".ui.gallery.NovaPlantaFragment">

        <ProgressBar
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cadastrar" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/planta_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:id="@+id/textView3"
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:src="@drawable/baseline_plus_one_24"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/bem_vinda_nova_planta"
            android:textColor="@color/opacity_text"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"
            android:text="@string/nome_encontrar_vaso"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeVaso" />

        <EditText
            android:id="@+id/nomePlanta"
            style="@style/Edit_Text"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/icon_name"
            android:hint="@string/nome_da_planta"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <View
            android:id="@+id/barra_nome"
            style="@style/Barra"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomePlanta" />

        <EditText
            android:id="@+id/nomeVaso"
            style="@style/Edit_Text"
            android:drawableEnd="@drawable/icon_name"
            android:hint="@string/nome_do_vaso"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomePlanta" />

        <View
            android:id="@+id/barra_nomeVaso"
            style="@style/Barra"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeVaso" />

        <Spinner
            android:id="@+id/especies"
            style="@style/Spinner_Custom"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/barra_especies"
            style="@style/Barra"
            android:layout_width="200dp"
            app:layout_constraintEnd_toEndOf="@+id/especies"
            app:layout_constraintStart_toStartOf="@+id/especies"
            app:layout_constraintTop_toBottomOf="@+id/especies" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cadastrar"
            style="@style/Button"
            android:text="@string/cadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/especies" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>